# sew-prompt-impact

./: pyproject.toml  pytest.ini
.junie/: guidelines.md
prompts/: cross-prompt-assessment-gpt-4.1-mini.md  cross-prompt-assessment-gpt-4.1-nano.md  cross-prompt-assessment-gpt-4.1.md  cross-prompt-assessment-gpt-4o.md  cross-prompt-assessment-llama3.3-70b-32k.md  cross-prompt-assessment-o3-mini.md  cross-prompt-assessment-o4-mini.md  cross-prompt-assessment-qwen2.5-32b.md  cross-prompt-assessment-qwen2.5-72b.md  cross-prompt-assessment-qwen2.5-coder-32b.md  cross-prompt-assessment-qwen2.5-coder-7b.md  cross-prompt-assessment-qwen3-30b-a3b-q4_K_M.md  cross-prompt-assessment-qwen3-30b.md  cross-prompt-assessment-qwen3-32b.md  plain-opeai-assessment.md  plain-output-gpt-4.1-mini-.md  plain-output-gpt-4.1-nano-.md  plain-output-o3-mini-.md  plain-output-qwen2.5-32b.md  plain-output-qwen2.5-72b.md  plain-output-qwen2.5-coder-32b.md  plain-output-qwen2.5-coder-7b.md  plain-output-qwen3-30b-a3b-q4_K_M.md  plain-output-qwen3-30b.md  plain-output-qwen3-32b.md  plain.md  prompt-fancy-assessment.md  prompt-fancy-output-gpt-4.1-mini.md  prompt-fancy-output-gpt-4.1-nano.md  prompt-fancy-output-gpt-4.1.md  prompt-fancy-output-gpt-4o.md  prompt-fancy-output-llama3.3-70b-32k.md  prompt-fancy-output-o3-mini.md  prompt-fancy-output-o4-mini.md  prompt-fancy-output-qwen2.5-32b.md  prompt-fancy-output-qwen2.5-72b.md  prompt-fancy-output-qwen2.5-coder-32b.md  prompt-fancy-output-qwen2.5-coder-7b.md  prompt-fancy-output-qwen3-30b-a3b-q4_K_M.md  prompt-fancy-output-qwen3-30b.md  (+49 more)
(+21 files in other folders)
