[tool.poetry]
name = "swe-prompt-impact"
version = "0.1.0"
description = "Assessing how prompts influence the style of code that an LLM writes"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "assessor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
mojentic = ">=0.7.1,<0.8.0"

[tool.poetry.scripts]
assessor = "assessor.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.12.0"
pytest-spec = "^3.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
